--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ yfinance = "^0.2.35"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
+ipykernel = "^6.29.0"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
