--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{ include = "index_analyze", from = "src" }]
 [tool.poetry.dependencies]
 python = "^3.9"
 yfinance = "^0.2.35"
+pyarrow = "^15.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
